# trend-score-dashboard

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  HANDOFF_news.md  README.md  ROADMAP.md  conftest.py  design.md  mock-trading-forward-test-design.md  pyproject.toml
backend/: __init__.py  app.py  config.py  engine.py  factors.py  market_data.py  market_hours.py  regime.py  scheduler.py  schemas.py  scoring.py  stops.py  store.py  themes.py
data/: crisis_events.yml  news_severity_lexicon.yml  news_sources.yml  themes.yml
deploy/: Caddyfile  README.md  schedule_force_buy.sh
docs/: DEPLOY_news.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
scripts/: backtest_10y.py  backtest_mean_reversion.py  check_us_funding.py  fix_order_ts_kst.py  force_buy.py  forward_test_report.py  research_regime_timing.py  run_trader.py  telegram_login.py  verify_us_order.py
tests/: conftest.py  test_ablation.py  test_alpha_composite.py  test_app.py  test_backtest_dart.py  test_backtest_loader.py  test_backtest_metrics.py  test_backtest_panel.py  test_backtest_run.py  test_backtest_universe.py  test_backtest_validation.py  test_backtest_walkforward.py  test_compare_presets.py  test_config_fallback_c.py  test_engine.py  test_entry_bias.py  test_factor_pool.py  test_factors.py  test_factors_alpha.py  test_fallback_c_cli.py  test_fallback_c_compare.py  test_fallback_c_groundtruth.py  test_fallback_c_score.py  test_forward_test_report.py  test_gemini_decider.py  test_horserace.py  test_inverse.py  test_kis_order.py  test_market_data.py  (+35 more)
(+152 files in other folders)
