[project]
name = "trend-score-dashboard"
version = "0.1.0"
description = "추세추종 매수-추천 스코어 대시보드 (KR/US, 테마별 주도주). 투자 자문 아님."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "apscheduler>=3.10,<4",
    "httpx>=0.27",
    "yfinance>=0.2.50",
    "pykrx>=1.0.45",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "tenacity>=9.0",
    "python-dateutil>=2.9",
    "telethon>=1.44.0",
    "google-genai>=2.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
    "types-python-dateutil>=2.9",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]  # 한글 주석/문자열 모호성 경고 무시

[tool.ruff.lint.per-file-ignores]
# schemas.py 의 Grade(str, Enum) 은 의도된 계약(직렬화 호환) — UP042(StrEnum 권고) 면제.
"backend/schemas.py" = ["UP042"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
files = ["backend"]

[[tool.mypy.overrides]]
module = ["pykrx.*", "yfinance.*", "apscheduler.*", "pandas.*", "telethon.*", "google.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
